--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ dependencies = [
   "open3d>=0.19.0",
   "opencv-python>=4.8.1.78",
   "xformers==0.0.29.post2",
+  "torchmetrics>=1.0.0",
+  "termcolor>=2.0.0",
+  "pillow>=12.0.0",
+  "matplotlib>=3.10.7",
 ]
 
 [tool.uv.sources]
